sonar quality gate fixed